minor improvements in annotation processor